--- a/support.html
+++ b/support.html
@@ -1,25 +1,27 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>DOOSH HUB</title>
-  <script src="https://cdn.tailwindcss.com"></script>  
+  <script src="https://cdn.tailwindcss.com"></script>
+
   <!-- Favicon -->
   <link rel="icon" href="Screenshot_2025-04-05-08-08-19-87.jpg" type="image/jpeg" sizes="32x32" />
-  
+
   <!-- Open Graph Meta -->
   <meta property="og:title" content="DOOSH HUB - Watch Animes, Movies and More!" />
   <meta property="og:description" content="Explore animes, movies, and series with fire neon vibes on DOOSH HUB." />
   <meta property="og:image" content="https://www.dooshtoons.linkpc.net/Screenshot_2025-04-05-08-08-19-87.jpg" />
   <meta property="og:url" content="https://www.dooshtoons.linkpc.net/" />
   <meta property="og:type" content="website" />
-  
+
   <!-- Twitter Card Meta -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="DOOSH HUB - Watch Animes, Movies and More!" />
   <meta name="twitter:description" content="Explore animes, movies, and series with fire neon vibes on DOOSH HUB." />
   <meta name="twitter:image" content="https://www.dooshtoons.linkpc.net/Screenshot_2025-04-05-08-08-19-87.jpg" />
-  
+
   <style>
     /* Neon Sparkling Animation */
     @keyframes neonGlow {
@@ -114,9 +116,31 @@
       background-color: rgba(0, 0, 0, 0.8);
       padding: 10px;
     }
+
+    /* Ad Banner Styling */
+    .ad-banner {
+      margin-top: 20px;
+      display: flex;
+      justify-content: center;
+      gap: 10px;
+      flex-wrap: wrap;
+    }
+
+    .ad-banner iframe {
+      border: none;
+      width: 468px;
+      height: 60px;
+    }
+
+    .ad-banner div {
+      width: 320px;
+      height: 50px;
+    }
   </style>
 </head>
+
 <body>
+
   <!-- Discord Button -->
   <a id="discordBtn" href="https://discord.gg/Wj32meHh" target="_blank">Join Us on Discord</a>
 
@@ -140,11 +164,10 @@
       <a href="copyright.html" class="button">Copyright Info</a>
     </div>
 
-  </div>
-
   <!-- Footer -->
   <footer>
     <p>&copy; 2025 Doosh Hub. All rights reserved. | <a href="contact.html" class="text-purple-500">Contact Us</a></p>
   </footer>
+
 </body>
 </html>
